[gd_scene load_steps=5 format=3 uid="uid://7r3uhqpvnrj1"]

[ext_resource type="Script" path="res://Scene/gameOver.gd" id="1_gameover"]
[ext_resource type="Texture2D" uid="uid://p8ipn0fia7qc" path="res://Sprites/Background/example.png" id="2_bg"]
[ext_resource type="Theme" uid="uid://g0gy1fii84di" path="res://Scene/DefaultButtons.tres" id="3_theme"]
[ext_resource type="FontFile" uid="uid://d0joq6v8gvy31" path="res://Fonts/Pixeled.ttf" id="4_font"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="bG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
theme_override_constants/separation = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 12
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 9
text = "Pontuação: 0"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 7
text = "Nome:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(0, 14)
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 7
max_length = 8
placeholder_text = "AAA"
text = "AAA"

[node name="SaveButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 14)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_theme")
text = "Salvar"

[node name="TopScoresLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 7
text = "Top 3:"
horizontal_alignment = 1

[node name="TopScoresList" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 6
text = "1. --- 0\n2. --- 0\n3. --- 0"
horizontal_alignment = 1

[node name="ScoresButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 14)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_theme")
text = "Ver Todas"

[node name="RestartButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 14)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_theme")
text = "Tentar Novamente"

[node name="MenuButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 14)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_theme")
text = "Menu"

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/ScoresButton" to="." method="_on_scores_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
